tests/negative/neg_string_concat_array_mismatch.safe
package neg_string_concat_array_mismatch

   type int_list is array of integer;

   function bad_concat returns integer
      var text : string (8) = "x"
      var values : int_list = [1, 2]
      var combined : string (8) = text & values

      return 0
